<resources>
    <string name="app_name">BoardgameTimer</string>
    <string name="time_per_round">Time Per Round:</string>
    <string name="extra_time_bank">Extra Time Bank:</string>
    <string name="number_of_players">Number of Players:</string>
    <string name="new_game_timer">New Game Timer</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="start_timer">Start Timer    </string>
</resources>
